# kir-mapper

./: Dockerfile  LICENSE  MANUAL.md  README.md  kir-mapper.yml  shapeit4.yml
precompiled/: kir-mapper
recommended_workflows/: Illumina_Amplicons.md  Illumina_Exomes.md  Illumina_WGS.md  Illumina_probe_and_PCR_enriched_library.md  Oxford_Nanopore.md
samples/: HG00403.KIR.bam.bai  HG01583.KIR.bam.bai
src/: CMakeLists.txt  README.md  ThreadPool.hpp  combine.cpp  combine.hpp  exome_bias.cpp  exome_bias.hpp  external.hpp  functions.cpp  functions.hpp  genotype.cpp  genotype.hpp  haplotypes.cpp  haplotypes.hpp  kir-mapper.yml  kir-mapper_compile.yml  kir-mapper_full.yml  main.cpp  map_dna.cpp  map_dna.hpp  ncopy.cpp  ncopy.hpp  preselect.cpp  preselect.hpp  setup.cpp  setup.hpp
